<resources>
    <string name="app_name">Shivani</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_splash_screen">Splash_Screen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Shivani</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid Email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login_screen">Login_Screen</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="click_here"> Click here</string>
    <string name="first_name">First Name</string>
    <string name="email_id">Email id</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="register">Register</string>
    <string name="mobilenumbererror">Enter valid Mobile Number</string>
    <string name="passworderror">Enter correct Password</string>
    <string name="passwordnotmatch">Confirm Password does not match with Password</string>
    <string name="go_to_login">"Register Successfully "</string>
    <string name="order">Order</string>
    <string name="history">History</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plash">+</string>
    <string name="minus">–</string>
    <string name="pay">Pay</string>
</resources>