<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.alvin.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_item_Detail2"
            app:destination="@id/item_Detail2" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.alvin.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.alvin.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/item_Detail2"
        android:name="com.alvin.Fragments.Item_Detail"
        android:label="fragment_item__detail"
        tools:layout="@layout/fragment_item__detail" >
        <action
            android:id="@+id/action_item_Detail2_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.alvin.Fragments.CartFragment"
        android:label="fragment_cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/to_checkout"
            app:destination="@id/checkout_Fragment" />
    </fragment>
    <fragment
        android:id="@+id/checkout_Fragment"
        android:name="com.alvin.Fragments.Checkout_Fragment"
        android:label="Checkout_Fragment" />
</navigation>