<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Activity.Login_Screen">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="center"
            android:src="@drawable/banner"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/robotoslab_regular"
            android:text="@string/email_id"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_gray"
            android:drawableStart="@drawable/email_id"
            android:drawablePadding="5dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/robotoslab_regular"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:singleLine="true"
            android:inputType="textWebPassword"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_gray"
            android:drawableStart="@drawable/password"
            android:drawablePadding="5dp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/robotoslab_regular"
            android:text="@string/forgetpassword"
            android:textColor="#E3010F"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_fill_red"
            android:fontFamily="@font/robotoslab_regular"
            android:gravity="center"
            android:text="@string/title_activity_login"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotoslab_regular"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/click_here"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotoslab_bold"
            android:text="@string/click_here"
            android:textColor="#E2000E"
            android:textSize="18sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>