<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/account">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_marginStart="100dp"
                    android:layout_width="40dp"
                    android:layout_gravity="bottom"
                    android:layout_height="40dp"
                    android:src="@drawable/camara" />

            </FrameLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/robotoslab_regular"
                android:text="@string/first_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_gray"
                android:drawableStart="@drawable/firstname"
                android:drawablePadding="5dp"
                android:inputType="textPersonName"
                android:maxLength="12"
                android:singleLine="true"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/robotoslab_regular"
                android:text="@string/email_id"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_gray"
                android:drawableStart="@drawable/email_id"
                android:drawablePadding="5dp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/robotoslab_regular"
                android:text="@string/mobile_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_gray"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="5dp"
                android:hint=""
                android:inputType="number"
                android:maxLength="12"
                android:singleLine="true"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/robotoslab_regular"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_gray"
                android:drawableStart="@drawable/password"
                android:drawablePadding="5dp"
                android:inputType="textWebPassword"
                android:singleLine="true"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/robotoslab_regular"
                android:text="@string/confirm_password"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_gray"
                android:drawableStart="@drawable/password"
                android:drawablePadding="5dp"
                android:inputType="textWebPassword"
                android:singleLine="true"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_fill_red"
                android:fontFamily="@font/robotoslab_regular"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotoslab_regular"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/robotoslab_bold"
                    android:text="@string/title_activity_login"
                    android:textColor="#E2000E"
                    android:textSize="18sp" />


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>